--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,23 +1,28 @@
-# Background
-# background_opacity  0.7
-background #1e1e1e
+font_family FiraCode
+font_size 11
 
-# Shell
-shell=/usr/bin/fish
+cursor_shape block
+cursor_shape_unfocused underline
+mouse_hide_wait 3.0
 
-# Font Family
-font_family      FiraCode
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-
-# Padding
-window_padding_width 8
-
-# Scrollback
 scrollback_lines 2000
 
+detect_urls yes
+url_style curly
+
+enabled_layouts grid
+
+tab_bar_align center
+
+hide_window_decorations yes
+confirm_os_window_close 0
+window_padding_width 8
+
+# background_blur 1
+
+# background_opacity 0.9
+
 # BEGIN_KITTY_THEME
-# Front End Delight
+# Gruvbox Material Dark Soft
 include current-theme.conf
 # END_KITTY_THEME
